--- a/public/index.css
+++ b/public/index.css
@@ -24,6 +24,23 @@ html, body {
   display: none;
 }
 
+#github {
+  position: absolute;
+  top: 0;
+  left: 15px; 
+  -webkit-transition: top 0.5s ease-out;
+  z-index: 5;
+}
+
+#github.off-screen {
+  top: -60px;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
 
 /* Offline page */
 
