--- a/public/index.css
+++ b/public/index.css
@@ -7,6 +7,7 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
+  //background-color: #000033;
 }
 
 .icon {
@@ -26,14 +27,23 @@ html, body {
 
 #github {
   position: absolute;
-  top: 0;
-  left: 15px; 
-  -webkit-transition: top 0.5s ease-out;
+  top: 0px;
+  left: 0px; 
+  -webkit-transition: all 0.5s ease-out;
   z-index: 5;
 }
 
-#github.off-screen {
-  top: -60px;
+#facebook {
+  position: absolute;
+  top: 0px;
+  left: 43px; 
+  -webkit-transition: all 0.5s ease-out;
+  z-index: 5;
+}
+
+.banner-off-screen {
+  top: -32px !important;
+  opacity: 0.5;
 }
 
 @keyframes blinker {
