--- a/public/index.css
+++ b/public/index.css
@@ -7,6 +7,11 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
+  /*
+  background-repeat: repeat, no-repeat;
+  background-blend-mode: multiply;
+  background-image: url(assets/background.png),linear-gradient(0deg, #d499ae, #e6b1af);
+  */
   background-image: linear-gradient(0deg, #d499ae, #e6b1af);
 }
 
