Update to a local tree.
During RC1 rushing, so many changes happened and changes weren't tracked. Here are summaries.

* Add & improve Thai Redcross links.
* Add sound data.
* Drop es5-bundled
* Add privacy policy fle.
* Replace Math.floor() with ~~
* Turn collision tester functions into class methods.
* Add isEmpty() & union() methods to CollisionBox.
* Add more providers for signing in.
* Graphics configurations.
* Simply use wider sprite for painting ground.
* Rename most enact*() to repaint*()
* Avoid calling ODR when it's actually 'this'.
* Rename Amandarine to A8e.
* Improve collision tester.
* Refactor action scheduler. Scheduler is now a part of ODR rather A8e.
* Make sure not to have non-priority methods in the scheduler.
* Improve action guidings to use action subclasses's built-in precalculations.
* New N7e sprites based on Beginner MV.
* Use private Unicode area to store some emojis & special glyphs.
* Correct line length calculation.
* Text alignment support.
* Represent an on-line status in hiscore with a trophy.
* Support creating submenus.
* Generate submenu from configuration definitions.
* Show on-line status such as profile photo and hiscore.
* New spritees.
* Add text field editor.
* New action classes.
* Allow multi-types in default action class based on current speed.
* Turn console buttons into classes.
* Implement Music class for managing songs. Refactor song registration.
* Auto-generate default users' nicknames.
* Sync configurations & hiscore.
* Fix sky gradient.

--- a/ondarun/index.css
+++ b/ondarun/index.css
@@ -50,6 +50,14 @@ body.inverted {
   z-index: 5;
 }
 
+#redcross {
+  position: absolute;
+  top: 0px;
+  left: 129px;
+  -webkit-transition: all 0.5s ease-out;
+  z-index: 5;
+}
+
 .banner-off-screen {
   top: -32px !important;
   opacity: 0.5;
@@ -64,4 +72,3 @@ body.inverted {
 #offline-resources {
   display: none;
 }
-
