--- a/ondarun/index.css
+++ b/ondarun/index.css
@@ -7,15 +7,18 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
-  /*
-  background-repeat: repeat, no-repeat;
-  background-blend-mode: multiply;
-  background-image: url(assets/background.png),linear-gradient(0deg, #d499ae, #e6b1af);
-  */
-  background-image: linear-gradient(0deg, #d499aeb0, #e6b1afb0);
 
+  position:fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+}
+
+body {
   background-color: pink;
   transition: background-color 3s linear;
+  background-image: linear-gradient(0deg, #d499aeb0, #e6b1afb0);
 }
 
 body.inverted {
